# CoralCode

./: CMakeLists.txt  coral.g4  coral.interp  coralLexer.interp  coralLexer.tokens  test.clr
client/coralcode/: package-lock.json  package.json
client/coralcode/src/: App.css  CodeEditor.js
include/: ast_tree_generator.hpp  coralBaseListener.h  coralLexer.h  coralListener.h  coralParser.h
install/antlr4-cpp-runtime-install/lib/: libantlr4-runtime.4.11.1.dylib
install/antlr4-cpp-runtime-install/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
scripts/: run_toolchain.sh
server/: go.mod  go.sum  main.go
server/controllers/: compilerController.go  editorController.go  memoryManagementController.go
server/db/: db.go
server/models/: File.go  User.go
server/routes/: editor_routes.go
src/: ast_tree_generator.cpp  coralBaseListener.cpp  coralLexer.cpp  coralListener.cpp  coralParser.cpp  main.cpp
